--- a/index.html
+++ b/index.html
@@ -72,6 +72,52 @@
                     </div>
                 </div>
             </div>
+<section class="option-box">
+  <form action="https://formspree.io/f/abcdwxyz" method="POST">
+    <div class="option-item">
+      <label>상품이름</label>
+      <input type="text" name="상품이름" placeholder="예) 위드 러브 실버 커플링">
+    </div>
+
+    <div class="option-item">
+      <label>남자 사이즈</label>
+      <input type="text" name="남자사이즈" placeholder="예) 5호">
+    </div>
+
+    <div class="option-item">
+      <label>여자 사이즈</label>
+      <input type="text" name="여자사이즈" placeholder="예) 5호">
+    </div>
+
+    <div class="option-item">
+      <label>남성 골드도금</label>
+      <input type="text" name="남성골드도금" placeholder="예) 안함 / 옐로우,핑크,화이트">
+    </div>
+
+    <div class="option-item">
+      <label>여성 골드도금</label>
+      <input type="text" name="여성골드도금" placeholder="예) 안함 / 옐로우,핑크,화이트">
+    </div>
+
+    <div class="option-item">
+      <label>남자 무광 / 유광</label>
+      <input type="text" name="남자무광유광" placeholder="예) 무광 / 선택안함">
+    </div>
+
+    <div class="option-item">
+      <label>여자 무광 / 유광</label>
+      <input type="text" name="여자무광유광" placeholder="예) 유광 / 선택안함">
+    </div>
+
+    <div class="option-item">
+      <label>반지 안쪽 각인</label>
+      <input type="text" name="각인내용" placeholder="예) 2026.02.14">
+    </div>
+
+    <button type="submit" class="fake-buy">응모하기</button>
+  </form>
+</section>
+
 
 <script src="js/index2.js"></script>
 </body>
