--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
 <section class="option-box">
-  <form action="https://formspree.io/f/abcdwxyz" method="POST">
+  <form action="mailto:clfl19@naver.com" method="post" enctype="text/plain">
     <div class="option-item">
       <label>상품이름</label>
       <input type="text" name="상품이름" placeholder="예) 위드 러브 실버 커플링">
