--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </header>
 
 <section class="hero">
-  <h1>발렌타인 기념 LUSO<BR> 선착순 100명 무료이벤트</h1>
+  <h1>발렌타인 기념 LUSO<BR>  silver 커플링100명 무료이벤트</h1>
+    <h2>당첨자 발표 : 2주내 추첨 메일 발표 </h2>
   <div id="countdown"></div>
   <a target="_blank" href="https://luso.co.kr/category/Silver(925)/218/" class="cta" >이벤트 바로가기</a>
 </section>
